--- a/css/main.css
+++ b/css/main.css
@@ -51,7 +51,9 @@ nav {
 }
 
 .card {
-  padding: 15px;
+  display: flex;
+  flex-direction: column;
+  padding: 15px 25px;
   margin-top: 40px;
   box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.24);
 }
@@ -76,15 +78,14 @@ nav {
   color: #f9f9f9;
   margin: 0;
   font-size: 18px;
-  line-height: 1.3;
+  line-height: 1.4;
 }
 
 .card_link {
-  display: block;
   margin: 0;
   margin-top: 10px;
-  padding: 5;
-  text-align: right;
+  padding: 5px;
+  align-self: flex-end;
 }
 
 
@@ -118,6 +119,10 @@ nav {
 
 /*               Projects                 */
 
+.projects_section {
+  background: #f9f9f9;
+}
+
 .voicelyn_project_card {
   background-color: #00afff;
 }
@@ -128,4 +133,5 @@ nav {
 
 .simpleathlete_project_card {
   background-color: #2d2d2d
+
 }
