--- a/css/main.css
+++ b/css/main.css
@@ -35,12 +35,8 @@ nav {
   color: #f9f9f9
 }
 
-.nav_btn {
-
-}
-
 .section {
-  padding: 30px;
+  padding: 60px;
 }
 
 .section_title {
@@ -53,16 +49,16 @@ nav {
 .card {
   display: flex;
   flex-direction: column;
-  padding: 15px 25px;
+  padding: 15px 30px;
   margin-top: 40px;
-  box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.24);
+  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.24);
 }
 
 .card_title {
   color: #f9f9f9;
   text-align: center;
   margin: 5px;
-  padding: 0px;
+  padding: 0;
   font-size: 32px;
   font-weight: normal;
 }
@@ -89,10 +85,6 @@ nav {
 }
 
 
-
-
-
-
 .profile_photo {
   width: 150px;
   height: 150px;
@@ -116,8 +108,9 @@ nav {
   font-size: 28px;
 }
 
-
+/******************************************/
 /*               Projects                 */
+/******************************************/
 
 .projects_section {
   background: #f9f9f9;
@@ -127,11 +120,101 @@ nav {
   background-color: #00afff;
 }
 
-.voicelyn_card_title {
-
-}
-
 .simpleathlete_project_card {
   background-color: #2d2d2d
+}
 
+
+/******************************************/
+/*                Skills                  */
+/******************************************/
+
+.skills_section {
+  background-color: #ffe47e;
+}
+
+.primary_skills_card {
+  background-color: #2c3642;
+}
+
+.primary_card_title {
+  margin-bottom: 50px;
+}
+
+.skill_container {
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 20px;
+}
+
+.skill_title {
+  align-self: center;
+  font-size: 24px;
+  margin-left: 30px;
+  color: #f9f9f9;
+}
+
+.secondary_skills_card {
+  background-color: #2c3642;
+}
+
+.secondary_card_title {
+  margin-bottom: 50px;
+}
+
+
+/******************************************/
+/*                Contact                 */
+/******************************************/
+
+.contact_section {
+  background-color: #2c3642;
+}
+
+.contact_title {
+  color: #f9f9f9;
+}
+
+.contact_card {
+  display: flex;
+  flex-direction: row;
+}
+
+.contact_link {
+  align-self: center;
+  text-transform: lowercase;
+  text-decoration: none;
+  margin: 0 auto;
+}
+
+.github_contact_card {
+  background-color: #6e5494;
+}
+
+.github_contact_image {
+  margin-right: 15px;
+}
+
+.github_contact_link {
+  font-size: 40px;
+}
+
+.linkedin_contact_card {
+  background-color: #0077b5;
+}
+
+.linkedin_contact_image {
+  margin-left: 10px;
+}
+
+.linkedin_contact_link {
+  font-size: 32px;
+}
+
+.email_contact_card {
+  background-color: #ea4335;
+}
+
+.email_contact_link {
+  font-size: 33px;
 }
