--- a/css/main.css
+++ b/css/main.css
@@ -73,8 +73,9 @@ nav {
 .card_description {
   color: #f9f9f9;
   margin: 0;
-  font-size: 2.2em;
-  line-height: 1.4;
+  font-size: 2.7em;
+  font-weight: 300;
+  line-height: 1.3;
 }
 
 .card_link {
