--- a/css/main.css
+++ b/css/main.css
@@ -13,21 +13,6 @@ ul {
   list-style: none;
 }
 
-.about_header {
-  display: flex;
-}
-
-.navbar_and_title_container {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-}
-
-nav {
-  display: flex;
-}
-
 .btn {
   font-size: 2.5em;
   padding: 5px;
@@ -51,7 +36,7 @@ nav {
   flex-direction: column;
   padding: 15px 30px;
   margin-top: 40px;
-  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.24);
+  box-shadow: 0 6px 6px 0 rgba(0,0,0,0.32);
 }
 
 .card_title {
@@ -73,8 +58,8 @@ nav {
 .card_description {
   color: #f9f9f9;
   margin: 0;
-  font-size: 2.7em;
-  font-weight: 300;
+  font-size: 2.4em;
+  font-weight: normal;
   line-height: 1.3;
 }
 
@@ -85,14 +70,34 @@ nav {
   align-self: flex-end;
 }
 
-
-.profile_photo {
-  width: 14em;
-  height: 14em;
-}
+/******************************************/
+/*                 About                  */
+/******************************************/
 
 .about_section {
   background-color: #2c3642;
+  padding-top: 15px;
+}
+
+
+.about_header {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+nav {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-bottom: 30px;
+}
+
+.nav_btn {
+  margin-left: 5px;
+  margin-right: 5px;
 }
 
 .profile_name {
