--- a/css/main.css
+++ b/css/main.css
@@ -58,9 +58,10 @@ ul {
 .card_description {
   color: #f9f9f9;
   margin: 0;
-  font-size: 2.4em;
+  font-size: 2em;
+  letter-spacing: 1.5px;
   font-weight: normal;
-  line-height: 1.3;
+  line-height: 1.45;
 }
 
 .card_link {
@@ -106,8 +107,21 @@ nav {
   margin: auto 0;
 }
 
+.profile_photo {
+  width: 25em;
+  height: 25em;
+  align-self: center;
+  margin-top: 2em;
+  margin-bottom: 2em;
+}
+
 .about_card {
-  background-color: #ff3c00
+  /*background-color: #ff3c00*/
+  background-color: #f5f5f5;
+}
+
+.about_card_description {
+  color: #212121;
 }
 
 
@@ -120,9 +134,9 @@ nav {
   background: #f9f9f9;
 }
 
-.voicelyn_project_card {
+/*.voicelyn_project_card {
   background-color: #00afff;
-}
+}*/
 
 .simpleathlete_project_card {
   background-color: #2d2d2d
