--- a/css/main.css
+++ b/css/main.css
@@ -69,6 +69,7 @@ ul {
   margin-top: 10px;
   padding: 5px;
   align-self: flex-end;
+  font-size: 3em;
 }
 
 /******************************************/
