--- a/css/main.css
+++ b/css/main.css
@@ -62,6 +62,7 @@ ul {
   letter-spacing: 1.5px;
   font-weight: normal;
   line-height: 1.45;
+  background-color: #ff0000 !important;
 }
 
 .card_link {
