--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,8 @@
 html, body {
   width: 100%;
   height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 body {
@@ -62,7 +64,7 @@ ul {
   letter-spacing: 1.5px;
   font-weight: normal;
   line-height: 1.45;
-  background-color: #ff0000 !important;
+
 }
 
 .card_link {
@@ -72,6 +74,29 @@ ul {
   align-self: flex-end;
   font-size: 3em;
 }
+
+.page_nav_section {
+  display: flex;
+  position: fixed;
+  width: 100%;
+  height: 80px;
+  top: 0;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 0px 20px;
+  background-color: #2c3642;
+}
+
+.page_nav {
+  align-self: center;
+}
+
+.page_nav_profile_name {
+  color: #68efad;
+  font-size: 3.5em;
+}
+
+
 
 /******************************************/
 /*                 About                  */
@@ -90,12 +115,13 @@ ul {
   align-items: flex-end;
 }
 
-nav {
+.about_nav {
   width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: center;
   margin-bottom: 30px;
+  opacity: 0;
 }
 
 .nav_btn {
