--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,12 @@
+* {
+  box-sizing: border-box;
+}
+
 html, body {
   width: 100%;
   height: 100%;
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
 }
 
 body {
@@ -280,7 +283,7 @@ ul {
 
 body {
   font-family: 'Roboto Mono', monospace;
-  
+
 }
 
 
