--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,8 @@
 html, body {
   width: 100%;
   height: 100%;
+  /*width: 100vw;*/
+  /*height: 100vh;*/
   margin: 0;
   padding: 0;
 }
@@ -20,14 +22,14 @@ ul {
 }
 
 .btn {
-  font-size: 1.25rem;
+  font-size: 1.1rem;
   padding: 0.3rem;
   text-transform: uppercase;
   color: #f9f9f9
 }
 
 .section {
-  padding: 3rem;
+  padding: 1.5rem;
 }
 
 .section_title {
@@ -40,7 +42,7 @@ ul {
 .card {
   display: flex;
   flex-direction: column;
-  padding: 1rem 2rem;
+  padding: 0.5rem 1rem;
   margin-top: 2.5rem;
   box-shadow: 0 6px 6px 0 rgba(0,0,0,0.32);
 }
@@ -94,6 +96,9 @@ ul {
 }
 
 .page_nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
   align-self: center;
   margin-right: 0.6rem;
 }
@@ -101,11 +106,10 @@ ul {
 .page_nav_profile_name {
   color: #68efad;
   font-size: 1.75rem;
-  margin-left: 1.25rem;
+  margin-left: 0.6rem;
   align-self: center;
+  text-decoration: none;
 }
-
-
 
 
 
@@ -132,11 +136,6 @@ ul {
   flex-direction: row;
   justify-content: center;
   margin-bottom: 2rem;
-}
-
-.nav_btn {
-  margin-left: 0.3rem;
-  margin-right: 0.3rem;
 }
 
 .profile_name {
@@ -189,6 +188,11 @@ ul {
   background-color: #ffe47e;
 }
 
+.skill_image {
+  width: 5rem;
+  height: 5rem;
+}
+
 .primary_skills_card {
   background-color: #2c3642;
 }
@@ -234,6 +238,13 @@ ul {
 .contact_card {
   display: flex;
   flex-direction: row;
+  padding-left: 0.3rem;
+  padding-right: 0.3rem;
+}
+
+.contact_image {
+  width: 5rem;
+  height: 5rem;
 }
 
 .contact_link {
@@ -247,12 +258,8 @@ ul {
   background-color: #6e5494;
 }
 
-.github_contact_image {
-  margin-right: 1rem;
-}
-
 .github_contact_link {
-  font-size: 2.5rem;
+  font-size: 1rem;
 }
 
 .linkedin_contact_card {
@@ -264,15 +271,17 @@ ul {
 }
 
 .linkedin_contact_link {
-  font-size: 2rem;
+  font-size: 1rem;
 }
 
 .email_contact_card {
   background-color: #ea4335;
+  padding-right: 0;
+  padding-left: 0;
 }
 
 .email_contact_link {
-  font-size: 2rem;
+  font-size: 0.8rem;
 }
 
 /* ----------- Non-Retina Screens ----------- */
