--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,7 @@ ul {
   font-size: 1.1rem;
   padding: 0.3rem;
   text-transform: uppercase;
-  color: #f9f9f9
+  color: #f5f5f5
 }
 
 .section {
@@ -48,7 +48,7 @@ ul {
 }
 
 .card_title {
-  color: #f9f9f9;
+  color: #f5f5f5;
   text-align: center;
   margin: 0.3rem;
   padding: 0;
@@ -64,12 +64,12 @@ ul {
 }
 
 .card_description {
-  color: #f9f9f9;
+  color: #f5f5f5;
   margin: 0;
   font-size: 1.2rem;
-  letter-spacing: 1.5px;
+  letter-spacing: 1.2px;
   font-weight: normal;
-  line-height: 1.45;
+  line-height: 1.30;
 
 }
 
@@ -85,7 +85,7 @@ ul {
   display: flex;
   position: fixed;
   width: 100%;
-  height: 5rem;
+  height: 3rem;
   top: 0;
   flex-direction: row;
   justify-content: space-around;
@@ -119,7 +119,7 @@ ul {
 
 .about_section {
   background-color: #2c3642;
-  padding-top: 1rem;
+  padding-top: 0;
 }
 
 
@@ -132,10 +132,11 @@ ul {
 
 .about_nav {
   width: 100%;
+  height: 3rem;
   display: flex;
   flex-direction: row;
   justify-content: center;
-  margin-bottom: 2rem;
+  align-items: center;
 }
 
 .profile_name {
@@ -168,7 +169,7 @@ ul {
 /******************************************/
 
 .projects_section {
-  background: #f9f9f9;
+  background: #f5f5f5;
 }
 
 /*.voicelyn_project_card {
@@ -211,7 +212,7 @@ ul {
   align-self: center;
   font-size: 1.25rem;
   margin-left: 2rem;
-  color: #f9f9f9;
+  color: #f5f5f5;
 }
 
 .secondary_skills_card {
@@ -232,7 +233,7 @@ ul {
 }
 
 .contact_title {
-  color: #f9f9f9;
+  color: #f5f5f5;
 }
 
 .contact_card {
